Fixed alternating row color in QTreeView (Sf2 patch selector)
With Qt 4.7 the alternating row color in the Sf2 patch selector dialog
somehow was messed up. Fixed this by explicitely setting the alternating
row color in the style's CSS files.

--- a/data/themes/cusis/style.css
+++ b/data/themes/cusis/style.css
@@ -181,6 +181,10 @@ timeLine {
 	font-size: 8px;
 }
 
+QTreeView {
+	alternate-background-color: rgb(108,108,108);
+}
+
 /* Plugins */
 
 TripleOscillatorView knob {
